--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
     --button-color: #f4f4fd;
     --logo-accent: #000000;
     --second-color: #e7e9fc;
+    --green-hover-color: #31D0AA;
 }
 
 .body {
@@ -50,16 +51,19 @@
 }
 
 .hero {
-    background: var(--tittle-body-color);
-    /* display: flex; */
+    max-width: 1440px;
+    height: 600px;
+    background: cover;
     margin: auto;
     padding-top: 188px;
     padding-bottom: 188px;
     text-align: center;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+        url(../images/people-office.jpg)
 }
 
 .hero-h {
-    /* display: flex; */
+
     font-weight: 700;
     font-size: 56px;
     line-height: 1.07;
@@ -199,6 +203,7 @@
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--paragraf-text-color);
+    margin-bottom: 8px;
 }
 
 .footer {
@@ -270,6 +275,7 @@ button {
 
 .link {
     text-decoration: none;
+    display: flex;
 }
 
 .list {
@@ -294,7 +300,6 @@ button {
 .title-ferst {
     text-align: center;
     margin-bottom: 72px;
-
 }
 
 .title:not(:last-child) {
@@ -303,6 +308,7 @@ button {
 
 .title {
     box-sizing: border-box;
+
 }
 
 .header-navigation {
@@ -353,25 +359,18 @@ button {
     background-color: #f4f4fd;
 }
 
-
-
 .we-doing {
     flex-basis: calc((100%-48px)/3);
 }
 
 .what-wedoing {
     display: flex;
-    padding-top: 0px;
+    padding-top: 0pxds;
 }
-
-
-
 
 .list-portfolio:not(:nth-last-child(-n+3)) {
     margin-bottom: 48px;
 }
-
-
 
 .team:not(:nth-child(4n)) {
     margin-right: 24px;
@@ -379,6 +378,8 @@ button {
 
 .team {
     flex-basis: calc((100%-48px)/4);
+    /* box-shadow: rgba(46, 47, 66, 0.08),
+        rgba(46, 47, 66, 0.16); */
 }
 
 .button-portfolio {}
@@ -420,7 +421,7 @@ button {
     text-align: center;
     background-color: var(--accent-color);
     padding-top: 32px;
-    padding-bottom: 32px;
+    /* padding-bottom: 32px; */
 }
 
 .button-port {
@@ -461,4 +462,167 @@ button {
     display: flex;
     flex-wrap: wrap;
     margin-right: 0px;
+}
+
+.social-list {
+    padding-top: 16px;
+
+}
+
+.item {}
+
+.foot-tit {
+    color: #ffffff;
+    text-align: center;
+    margin-bottom: 76px;
+    display: flex;
+    /* padding-top: 100px;
+    padding-bottom: 130px; */
+    font-weight: 500;
+    font-size: 16px;
+
+}
+
+.footer-social {
+    display: flex;
+    /* flex-direction: column; */
+
+}
+
+.section-customers {
+    padding-top: 120px;
+    padding-bottom: 130px;
+    display: flex;
+
+}
+
+.foot-soc {
+    display: flex;
+}
+
+/* .customers {
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+} */
+
+.soc-link {
+    display: flex;
+    color: #e7e9fc;
+
+}
+
+.social {
+    display: flex;
+    padding-left: 16px;
+}
+
+.icons {
+
+    display: flex;
+    margin-top: 8px;
+    margin-bottom: 32px;
+
+}
+
+.mark {
+    gap: 24px;
+}
+
+.title::before {
+    content: "";
+    display: block;
+    height: 112px;
+    background-color: var(--button-color);
+
+    background-size: 64px 64px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.icon-delivery::before {
+    background-image: url(../images/icons.svg/anten.svg);
+
+}
+
+.icon-clock::before {
+    background-image: url(../images/icons.svg/clock1.svg);
+}
+
+.icon-comp::before {
+    background-image: url(../images/icons.svg/diagram1.svg);
+}
+
+.icon-astronaut::before {
+    background-image: url(../images/icons.svg/astron.svg);
+}
+
+.link-cust {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+
+}
+
+.icon-cust {
+    width: calc((100%-120px)/6);
+    height: 88px;
+    list-style: none;
+}
+
+.icon {
+    width: 104px;
+    height: 56px;
+    fill: #afb1b8;
+}
+
+.customers {
+    margin-bottom: 72px;
+    text-align: center;
+}
+
+/* .cont-customers::after {
+    display: flex;
+} */
+
+.customers-list {
+    display: flex;
+    gap: 24px;
+}
+
+/* ////Footer////// */
+
+.foot-soc {
+    display: flex;
+}
+
+.coc-link {
+    display: flex;
+
+}
+
+.soc-list {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+
+.soc-list-item {
+    width: 40px;
+    height: 40px;
+}
+
+.soc-link {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--accent-focus);
+
 }
