--- a/css/styles.css
+++ b/css/styles.css
@@ -631,14 +631,18 @@ button {
 
 }
 
+.soc-link:hover,
+.soc-link:focus {
+    background-color: var(--hover-focus-color);
+
+}
+
 .soc-icon-footer {
 
     display: flex;
 }
 
 .soc-link-footer {
-    /* width: 100%;
-    height: 100%; */
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -660,8 +664,6 @@ button {
     text-align: center;
     display: flex;
     justify-content: center;
-    /* padding-top: 100px;
-    padding-bottom: 130px; */
     font-weight: 500;
     margin-bottom: 16px;
 }
@@ -674,23 +676,9 @@ button {
     displey: flex;
 }
 
-/* .footer {
-    display: flex;
-} */
 
-.container-foot {
-    /* display: flex; */
-    flex-direction: column;
-    margin-top: 0;
-    box-sizing: border-box;
-}
 
-/* .foot-container {
-    display: flex;
-    align-items: baseline; */
-.foot {
-    /*  */
-}
+.foot {}
 
 
 .footer-par {
@@ -711,7 +699,6 @@ button {
 
     display: flex;
 
-
 }
 
 .oll-footer {
@@ -725,17 +712,6 @@ button {
 
 
 
-
-
-
-
-/* ----Portfolio-footer */
-
-
-.footer {}
-
-.container {}
-
 .footer-container {
 
     display: flex;
@@ -745,32 +721,42 @@ button {
     margin-right: 120px;
 }
 
-.logo-f {}
-
-.link {}
-
-.log {}
-
-.footer-par {}
-
-.media {}
-
-.socialtext {}
-
 .soc-list {
     display: flex;
 }
 
-.list {}
+.team {
+    background: var(--accent-color);
+    box-shadow: 0px 1px 6px rgb(46 47 66 / 8%),
+        0px 1px 1px rgb(46 47 66 / 16%),
+        0px 2px 1px rgb(46 47 66 / 8%);
+    border-radius: 0px 0px 4px 4px;
+    width: calc((100% - 72px) / 4);
+}
 
-.soc-list-footer {}
-
-.soc-link-footer {}
-
-.soc-icon-footer {}
+/*---- PORTFOLIO HOVER */
 
 
+.list-portfolio {
+    cursor: pointer;
+}
 
 
 
-/* TEsT------------------------------------- */
+.tit-paragraf:hover,
+.paragraf:focus {
+    border: 0.5px solid #F4F4FD;
+
+    color: #868686
+}
+
+.title-portfolio:hover,
+.title-portfolio:focus {
+    color: #868686;
+}
+
+.portfolio:hover,
+.portfolio:focus {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+
+}
