--- a/css/styles.css
+++ b/css/styles.css
@@ -190,6 +190,7 @@
     line-height: 1.2;
     color: var(--tittle-body-color);
     margin-bottom: 8px;
+    margin-top: 8px;
 
 }
 
@@ -347,7 +348,10 @@ button {
 
 .our-team .backgraund {
     background-color: #f4f4fd;
+
 }
+
+.our-team {}
 
 .we-doing {
     flex-basis: calc((100%-48px)/3);
@@ -411,7 +415,7 @@ button {
     text-align: center;
     background-color: var(--accent-color);
     padding-top: 32px;
-    /* padding-bottom: 32px; */
+    padding-bottom: 32px;
 }
 
 .button-port {
@@ -420,7 +424,7 @@ button {
 }
 
 .tit-paragraf {
-    padding: 16px 32px;
+    padding: 32px 16px;
     border-bottom-width: 1px;
     border-bottom-style: solid;
     border-bottom-color: var(--second-color);
@@ -479,12 +483,6 @@ button {
 .foot-soc {
     display: flex;
 }
-
-/* .customers {
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-} */
 
 .soc-link {
     display: flex;
@@ -566,7 +564,6 @@ button {
 .soc-list-item {
     width: 40px;
     height: 40px;
-    margin-bottom: 32px;
 }
 
 .soc-link {
@@ -640,6 +637,7 @@ button {
 .soc-icon-footer {
 
     display: flex;
+
 }
 
 .soc-link-footer {
@@ -647,11 +645,16 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #2E2F42;
+    background: rgba(255 255 255 0, 2);
 
     width: 40px;
     height: 40px;
 }
+
+.soc-link-footer {
+    background: #2E2F42;
+}
+
 
 .soc-link-footer:hover,
 .soc-link-footer:focus {
@@ -661,11 +664,22 @@ button {
 
 .foot-tit {
     color: #ffffff;
-    text-align: center;
     display: flex;
-    justify-content: center;
     font-weight: 500;
     margin-bottom: 16px;
+    cursor: pointer;
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+}
+
+.foot-tit:hover,
+.foot-tit:focus {
+
+    color: rgba(231, 233, 252, 1);
 }
 
 .social {
@@ -691,7 +705,16 @@ button {
     align-items: flex-start;
     padding: 0px;
     width: 264px;
+    cursor: pointer;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
 }
+
+.footer-par:hover,
+.footer-par:focus {
+    color: rgba(231, 233, 252, 1);
+}
+
 
 .container-foot2 {}
 
@@ -745,9 +768,7 @@ button {
 
 .tit-paragraf:hover,
 .paragraf:focus {
-    border: 0.5px solid #F4F4FD;
-
-    color: #868686
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .title-portfolio:hover,
@@ -755,8 +776,15 @@ button {
     color: #868686;
 }
 
-.portfolio:hover,
-.portfolio:focus {
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+.list-portfolio:hover,
+.list-portfolio:focus {}
 
+.button-portfolio:hover,
+.button-portfolio:focus {
+
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+        0px 2px 1px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+    ;
 }
