--- a/css/styles.css
+++ b/css/styles.css
@@ -446,7 +446,15 @@ button {
 .list-portfolio {
     margin-right: 24px;
     margin-bottom: 48px;
+    display: block;
 }
+
+.wrap:hover,
+.wrap:focus {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+
 
 .list-portfolio:nth-last-child(-n+3) {
     margin-bottom: 0;
@@ -787,4 +795,8 @@ button {
         0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
     ;
+}
+
+.wrap {
+    /* display: block; */
 }
