--- a/css/styles.css
+++ b/css/styles.css
@@ -243,9 +243,11 @@ h3,
 h4,
 h5,
 h6,
-p {
+p,
+b {
     margin-top: 0;
     margin-bottom: 0;
+
 }
 
 ul,
@@ -670,11 +672,10 @@ button {
 
 .foot-tit {
     color: #ffffff;
-    display: flex;
+    display: block;
     font-weight: 500;
     margin-bottom: 16px;
     cursor: pointer;
-
     font-family: 'Roboto';
     font-style: normal;
     font-size: 16px;
