--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,7 @@
     padding-right: 32px;
     margin-top: 59px;
     border: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -83,11 +84,13 @@
     font-size: 18px;
     line-height: 1.33;
     font-family: "Raleway", sans-serif;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .logo-link:hover,
 .logo-link:focus {
     color: var(--accent-focus);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .log {
@@ -101,6 +104,7 @@
 
 .logo-f {
     margin-bottom: 16px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contakt-link {
@@ -110,18 +114,21 @@
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--paragraf-text-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contakt-nav:hover,
 .contakt-nav:focus,
 .contakt-nav.current {
     color: var(--accent-focus);
+
 }
 
 .contakt-link:hover,
 .contakt-link:focus,
 .contakt-link:active {
     color: var(--accent-focus);
+
 }
 
 .contakt-nav {
@@ -130,6 +137,7 @@
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--tittle-body-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-button {
@@ -144,12 +152,14 @@
     line-height: 1.5;
     font-family: "Roboto";
     padding: 12px 24px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-button:hover,
 .site-button:focus {
     color: var(--accent-color);
-    background-color: var(--accent-focus)
+    background-color: var(--accent-focus);
+
 }
 
 .background {
@@ -159,6 +169,7 @@
 .site-button:active {
     background-color: var(--accent-focus);
     color: var(--accent-color);
+
 }
 
 .title-ferst {
@@ -223,11 +234,13 @@
     width: 264px;
     margin-bottom: 16px;
     display: flex;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .logo-f:hover,
 .logo-f:focus {
     color: var(--accent-focus);
+
 }
 
 
@@ -311,6 +324,7 @@ button {
 
 .logo-link {
     margin-right: 76px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-list {
@@ -340,6 +354,7 @@ button {
 
 .adress {
     display: flex;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header {
@@ -378,7 +393,9 @@ button {
         rgba(46, 47, 66, 0.16); */
 }
 
-.button-portfolio {}
+.button-portfolio {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .button-portfolio:not(:last-child) {
     margin-right: 24px;
@@ -406,6 +423,7 @@ button {
     margin-right: auto;
     justify-content: center;
     margin-bottom: 72px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .section {
@@ -597,7 +615,7 @@ button {
     width: 104px;
     height: 56px;
     fill: #afb1b8;
-
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -616,6 +634,7 @@ button {
     height: 100%;
     border: 1px solid #8e8f99;
     border-radius: 4px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -623,24 +642,28 @@ button {
 .link-cust:hover,
 .link-cust:focus {
     border-color: var(--hover-focus-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
 .link-cust:hover .icon,
 .link-cust:focus .icon {
     fill: var(--hover-focus-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-cust {
     width: calc((100%-120px)/6);
     height: 88px;
     list-style: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
 .soc-link:hover,
 .soc-link:focus {
     background-color: var(--hover-focus-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -659,6 +682,7 @@ button {
     width: 40px;
     height: 40px;
     background-color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -667,6 +691,7 @@ button {
 .soc-link-footer:hover,
 .soc-link-footer:focus {
     background: var(--green-hover-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -687,6 +712,7 @@ button {
 .foot-tit:focus {
 
     color: rgba(231, 233, 252, 1);
+
 }
 
 .social {
@@ -769,9 +795,9 @@ button {
 
 .list-portfolio {
     cursor: pointer;
+    position: relative;
+    display: block;
 }
-
-
 
 .tit-paragraf:hover,
 .tit-paragraf:focus {
@@ -799,7 +825,6 @@ button {
         0px 2px 1px rgba(0, 0, 0, 0.08),
         0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
-    ;
 }
 
 .schadow {}
@@ -811,9 +836,189 @@ button {
     display: block;
     max-width: 100%;
     height: auto;
+
 }
 
 .hero-button:hover,
 .hero-button:focus {
     background-color: #404bbf;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+
+.contakt-nav:hover::after,
+.contakt-nav:focus::after,
+.contakt-nav.current:active::after {
+    content: "";
+    color: inherit;
+    align-items: baseline;
+    display: block;
+    background: var(--hover-focus-color);
+    border-radius: 2px;
+    width: 48px;
+    height: 4px;
+    position: absolute;
+    left: 0px;
+    top: 48px;
+    transform: translate();
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.contakt-nav.current::after {
+
+    content: "";
+    color: inherit;
+    align-items: baseline;
+    display: block;
+    background: var(--hover-focus-color);
+    border-radius: 2px;
+    width: 48px;
+    height: 4px;
+    position: absolute;
+    left: 0px;
+    top: 48px;
+    transform: translatey(-100%);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-contact {
+    position: relative;
+}
+
+
+/* ------------TEST----------------- */
+.box-text {
+
+    width: 300px;
+    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #4D5AE5;
+    box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
+        0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    position: relative;
+    overflow: hidden;
+}
+
+.box-text:hover .thumb-text {
+    transform: translatex(0);
+}
+
+.thumb-text {
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #3f51b5;
+
+    transform: translatex(-100%);
+    transition: transform 250ms ease;
+}
+
+.thumb-text>p {
+    color: #fff;
+    padding: 10px;
+    margin: 0;
+    font-size: 18px;
+}
+
+.overlay {
+    position: absolute;
+    background-color: var(--accent-focus);
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+    background-blend-mode: soft-light;
+    mix-blend-mode: normal;
+    color: var(--accent-color);
+    padding-left: 32px;
+    padding-top: 40px;
+    overflow: auto;
+    transform: translate(-100%, 0);
+    /* transition: transform 250ms linear; */
+    cubic-bezier: (0.4, 0, 0.2, 1);
+    z-index: ;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
+}
+
+.overlay-wraper {
+    position: relative;
+    overflow: hidden;
+
+}
+
+.list-portfolio:hover .overlay,
+.list-portfolio:focus .overlay {
+    transform: translate(0, 0);
+}
+
+/* -------js Window--------- */
+.backdrop {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    z-index: 100;
+}
+
+
+.backdrop {}
+
+.modal {
+    position: absolute;
+    width: 408px;
+    height: 576px;
+    left: 50%;
+    top: 50%;
+    background: #FCFCFC;
+    transform: translate(-50%, -50%);
+}
+
+.modal-close-btn {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
+    border: 1px solid #8e8f99;
+    padding: 0;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: var(--second-color);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+
+    fill: var(--accent-color);
+    background-color: var(--hover-focus-color);
+}
+
+.icon-modal {
+    width: 8px;
+    height: 8px;
+    justify-content: center;
+    align-content: center;
+
+
+    position: absolute;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
